# gw2-nexus-js-loader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deploy.sh
.github/workflows/: build.yml  cross-compile.yml
cmake/: CEFHelpers.cmake  DownloadCEF.cmake
docker/: build.sh  package.sh  wine_build.py
src/host/: host_browser_app.cpp  host_browser_app.h  host_browser_client.cpp  host_browser_client.h  host_ipc_bridge.cpp  host_ipc_bridge.h  host_osr_render_handler.cpp  host_osr_render_handler.h  host_pipe_client.cpp  host_pipe_client.h  main.cpp
src/plugin/: addon_instance.cpp  addon_instance.h  addon_manager.cpp  addon_manager.h  addon_scheme_handler.cpp  addon_scheme_handler.h  browser_app.cpp  browser_app.h  browser_client.cpp  browser_client.h  cef_host_proxy.cpp  cef_host_proxy.h  cef_loader.cpp  cef_loader.h  cef_manager.cpp  cef_manager.h  d3d11_texture.cpp  d3d11_texture.h  delay_load_hook.cpp  globals.cpp  globals.h  host_process.cpp  host_process.h  in_process_browser.cpp  in_process_browser.h  input_handler.cpp  input_handler.h  ipc_handler.cpp  ipc_handler.h  main.cpp  nexus_bridge.cpp  nexus_bridge.h  osr_render_handler.cpp  osr_render_handler.h  overlay.cpp  overlay.h  pipe_client.cpp  pipe_client.h  shared_frame_reader.cpp  shared_frame_reader.h  (+2 more)
src/shared/: ipc_messages.h  pipe_protocol.h  version.h
src/subprocess/: ipc_client.cpp  ipc_client.h  js_bindings.cpp  js_bindings.h  main.cpp  renderer_app.cpp  renderer_app.h
web/example/: app.js  index.html  manifest.json  popup.html  style.css
